--- a/User_Data/cangjie7-1.dict.yaml
+++ b/User_Data/cangjie7-1.dict.yaml
@@ -1,4 +1,4 @@
-#23.02.27-2323
+#23.07.02-1941
 # encoding: utf-8
 #
 # 單字碼表《五倉世紀》來自 www.chinesecj.com
@@ -23175,7 +23175,7 @@ z	\z
 吂	yvr
 氓	yvp
 妄	yvv
-巡	yvv
+巡	zvv
 亩	yw;
 裹	ywv
 裏	ywv
