--- a/User_Data/sadfesKzaVassuk.dict.yaml
+++ b/User_Data/sadfesKzaVassuk.dict.yaml
@@ -1,4 +1,4 @@
-#23.03.25-1136
+#23.07.02-1942
 # Rime dictionary
 # vim: set ts=8 sw=8 noet:
 # encoding: utf-8
@@ -51995,7 +51995,7 @@ use_preset_vocabulary: true
 醺	hmfMf
 醺	hmfmf
 旬	jyfp;
-巡	jyfyv
+巡	jyfzv
 𠣙	jyfpm
 郇	gxfpl
 郇	gxfpl
