--- a/User_Data/原表/cangjie7-1/cangjie7-1含五六相異者最新版.yaml
+++ b/User_Data/原表/cangjie7-1/cangjie7-1含五六相異者最新版.yaml
@@ -1,4 +1,4 @@
-#23.02.10-1906
+#23.07.02-1940
 #快速刪部分芝卻注釋ᶦ者: (?s)<hash>.*?</hash>	此昰非貪婪匹配
 #@cangjie7-1漢字部分ᵗ原文
 
@@ -18,6 +18,7 @@
 #[23.01.31-2245,] 喲 隨 鏈 次碼
 #[23.02.01-2328,] 㢓 ˇ複製˪一份 置於未被注釋之處
 #[23.03.17-1841,] 「斬」
+#[23.07.02-1940,] 「巡」
 ...
 的	x;
 我	zx
@@ -22675,7 +22676,7 @@
 吂	yvr
 氓	yvrvp
 妄	yvv
-巡	yvvv
+巡	辶vvv
 邋	
 亩	yw;
 裹	ywdv
